# Parsely-AI

./: .env.example  .env.railway  .gitignore  API_KEY_UPDATE_GUIDE.md  BRAND.md  CLAUSE_IDENTIFICATION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.hackathon  HACKATHON_DEPLOYMENT.md  HACKATHON_SUBMISSION.md  LICENSE  LLM_INTEGRATION_SUMMARY.md  NGROK_SETUP.md  PROJECT_STRUCTURE.md  Procfile  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RAILWAY_TROUBLESHOOTING.md  README.md  README_HACKATHON.md  auto_hackathon_setup.py  body.json  deploy-railway.bat  deploy.bat  deploy.py  deploy.sh  docker-compose.hackathon.yml  docker-compose.yml  final_hackathon_setup.py  fly.toml  git_setup.bat  git_setup.sh  hackathon_webhook_info.json  index.html  main.py  nginx.conf  nixpacks.toml  (+38 more)
src/: __init__.py  insurance_claim_processor.py  pyproject.toml
src/api/: auth.py  hackathon_main.py  main.py  production_main.py  simple_main.py
src/decision_engine/: __init__.py  claim_evaluator.py  gemini_claim_evaluator.py
src/document_processing/: document_processor.py  docx_processor.py  email_processor.py  simple_processor.py
src/pipeline/: __init__.py
src/pipeline/core/: __init__.py  config.py  exceptions.py  interfaces.py  logging_utils.py  models.py  utils.py
src/pipeline/stages/: __init__.py  stage1_input_documents.py
src/pipeline/stages/extractors/: __init__.py  (+3 more)
src/query_parsing/: __init__.py  gemini_query_parser.py  query_parser.py
src/semantic_search/: __init__.py  semantic_retriever.py
src/ui/: streamlit_app.py
(+44 files in other folders)
