[project]
name = "parsely-ai"
version = "2.0.0"
description = "Fresh take on document processing - AI-powered document analysis platform"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "../README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
